--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-video-player": "^0.12.0",
     "react-navigation-stack": "react-navigation/stack",
     "react-redux": "^7.2.6",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
