--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-image-picker": "^4.2.0",
     "react-native-media-controls": "^2.3.0",
     "react-native-paper": "^4.10.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
