--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,4 +1,4 @@
-arguments=
+arguments=--init-script /var/folders/hp/cftxyqg16y36j2g_79zgcjc00000gp/T/init14981234968456388124.gradle --init-script /var/folders/hp/cftxyqg16y36j2g_79zgcjc00000gp/T/init15449647175473759120.gradle
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
