--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-bottomsheet-reanimated": "^0.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.2.0",
+    "react-native-interactable-reanimated": "^0.0.15",
     "react-native-media-controls": "^2.3.0",
     "react-native-paper": "^4.10.0",
-    "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-slider": "^0.11.0",
